# rusty-resizer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  main.rs
src/http/: client.rs  mod.rs
src/http/middleware/: statsd.rs
src/img/: error.rs  format.rs  image.rs  mod.rs  resizable.rs
tests/: ping.rs  resize.rs
tests/support/: mod.rs
