[package]
name = "rusty_resizer"
version = "0.1.9"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusty_resizer"

[dependencies]
actix-http = "3.0.4"
actix-web = "4.0.1"
awc = { version = "3.0.0", features = ["openssl"] }
cadence = "0.29.0"
env_logger = "0.9.0"
futures-util = "0.3.21"
httpdate = "1.0.2"
log = "0.4.17"
magick_rust = { version = "0.16.0", features = ["disable-hdri"] }
openssl = "0.10.40"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
url = "2.2.2"
image = "0.24.2"

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.10"
tokio = "1.17.0"
