[package]
name = "rusty_resizer"
version = "0.4.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rusty_resizer"

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
awc = { version = "3.1.1", features = ["openssl"] }
cadence = "0.29.1"
env_logger = "0.10.0"
futures-util = "0.3.28"
httpdate = "1.0.2"
image = "0.24.6"
log = "0.4"
magick_rust = { git = "https://github.com/nlfiedler/magick-rust", features = [
    "disable-hdri",
] }
openssl = "0.10.60"
pin-project-lite = "0.2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
tokio = "1.29.1"
url = "2.4.0"

[dev-dependencies]
actix-rt = "2.8.0"
actix-service = "2.0.2"
gif = "0.12.0"
reqwest = "0.11.18"
